[package]
name = "yalp"
description = "Yet Another Lexer and Parser library"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gpabois/yalp"
authors = ["Gaël Pabois"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yalp-core = { path = "./core/" }
yalp-macros = { path = ".macros/" }

