[package]
name = "yalp-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
prettytable-rs = "0.10.0"
ruast = "0.0.5"
thiserror = "1.0.61"
pb-bnf = { git = "https://github.com/gpabois/pb-bnf" }
